--- a/tournois/tournaments/templates/tournaments/tournois.html
+++ b/tournois/tournaments/templates/tournaments/tournois.html
@@ -1,4 +1,13 @@
-
+{% if username %}
+    <p>Bonjour {{username}}</p>
+    <form action="{%url 'logout'%}">
+        <button type="submit">Déconnection</button>
+    </form>
+{% else %}
+    <form action="{%url 'login'%}">
+        <button type="submit">Connection</button>
+    </form>
+{% endif %}
 {% if tournois_list %}
     <ul>
     {% for tournoi in tournois_list %}
