--- a/tournois/tournaments/templates/tournaments/match_detail.html
+++ b/tournois/tournaments/templates/tournaments/match_detail.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+{% block content %}
+
 {% if match %}
     <p> {{match}} : </p>
   
@@ -10,3 +13,4 @@
 {% else %}
     <p>Ce match n'existe pas.</p>
 {% endif %}
+{% endblock content %}
