--- a/tournois/tournaments/templates/registration/login.html
+++ b/tournois/tournaments/templates/registration/login.html
@@ -3,4 +3,8 @@
     {{ form }}
     <input type="submit" value="login">
     <input type="hidden" name="next" value="{{ next }}">
+   
+    <form >
+        <button type="submit">Déconnection</button>
+    </form>
 </form>
