Changed Commentaire.author attribute from charfield to foreign key

--- a/tournois/tournaments/templates/tournaments/match_detail.html
+++ b/tournois/tournaments/templates/tournaments/match_detail.html
@@ -17,7 +17,7 @@
                 <p> {{comment.author}} a écrit : </br> {{comment.content}} </p>
             {% endfor%}
         {% else %}
-            <p> {{comment.author}} a écrit : </br> {{comment.content}} </p>
+            <p> Soyez le premier à laisser un commentaire ! </p>
         {% endif%}
         {%if form%}
         <div>
