--- a/tournois/templates/base.html
+++ b/tournois/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Tournois{% endblock %}</title>
+    {% block head %}{% endblock %}
 </head>
 
 <body>
