--- a/tournois/tournaments/templates/tournaments/match_detail.html
+++ b/tournois/tournaments/templates/tournaments/match_detail.html
@@ -1,34 +1,80 @@
 {% extends 'base.html' %}
+{% block head %}
+<style>
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        border:3px solid #000000;
+        width: 70%; 
+        padding: 8px 16px!important;
+        padding-top: 16px!important;
+        padding-bottom: 16px!important;   
+    
+    }
+    
+    td {
+        border:3px solid #000000;padding: 8px 16px!important;
+        padding-top: 8px!important;
+        padding-bottom: 8px!important; 
+    }
+
+    th {
+        border:3px solid #000000;
+        background-color: lightcyan
+    }
+    </style>
+
+{% endblock head %}
+
 {% block content %}
 
 {% if match %}
     <p> {{match}} : </p>
   
         <table>
+            <tbody>
+            <tr>
             <th>{{match.team_1}}</th>
             <th>{{match.team_2}}</th>
+            </tr>
+            <tr>
             <td>{{match.score_1}}</td>
             <td>{{match.score_2}}</td>
+            </tr>
+        </tbody>
         </table>
 
         <p>Commentaires : </p>
         {%if match.commentaire_set.all%}
             {%for comment in match.commentaire_set.all%}
-                <p> {{comment.author}} a écrit : </br> {{comment.content}} </p>
+                {%if comment.id == comment_id %}
+                    <form action="{%url 'tournaments:edit_comment' match.id comment_id%}" method="post">
+                        {% csrf_token %}
+                        {{ form }}
+                        <input type="submit" value="Submit">
+                    </form>
+                {%else%}
+                    <p> {{comment.author}} a écrit : </br> {{comment.content}} </p>
+                    {% if comment.author == request.user%}
+                        <p><a href = "{%url 'tournaments:edit_comment' match.id comment.id %}">Modifier</a></p>
+                    {%endif%}
+                {%endif%}
             {% endfor%}
         {% else %}
             <p> Soyez le premier à laisser un commentaire ! </p>
         {% endif%}
-        {%if form%}
-        <div>
-            <form action="{%url 'tournaments:match_detail' match.id%}" method="post">
-                {% csrf_token %}
-                {{ form }}
-                <input type="submit" value="Submit">
-            </form>
-        </div>
-        {%else%}
-            <p>Vous devez être connecté pour laisser un commentaire.</p>
+        {%if not comment_id %}
+            {%if form%}
+            <div>
+                <form action="{%url 'tournaments:match_detail' match.id%}" method="post">
+                    {% csrf_token %}
+                    {{ form }}
+                    <input type="submit" value="Poster">
+                </form>
+            </div>
+            {%else%}
+                <p>Vous devez être connecté pour laisser un commentaire.</p>
+            {%endif%}
         {%endif%}
 {% else %}
     <p>Ce match n'existe pas.</p>
