--- a/tournois/tournaments/templates/tournaments/tournois.html
+++ b/tournois/tournaments/templates/tournaments/tournois.html
@@ -1,4 +1,10 @@
 {% extends 'base.html' %}
+{% block navbar_items %}
+<li class="nav-item"><a class="nav-link active" href="">Tournois</a></li>
+
+
+{% endblock %}
+
 {% block content %}
 
 {% if tournois_list %}
