--- a/tournois/tournaments/templates/registration/login.html
+++ b/tournois/tournaments/templates/registration/login.html
@@ -1,7 +1,10 @@
+<div class="form-outline mb-4">
 <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
+    
     {{ form }}
     <input type="submit" value="login">
     <input type="hidden" name="next" value="{{ next }}"> 
     
 </form>
+</div>
