--- a/tournois/tournaments/templates/tournaments/match_detail.html
+++ b/tournois/tournaments/templates/tournaments/match_detail.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
+{% block navbar_items %}
+<li class="nav-item"><a class="nav-link" href="{%url 'tournaments:tournois'%}">Tournois</a></li>
+<li class="nav-item"><a class="nav-link" href="{%url 'tournaments:tournoi_detail' match.pool.tournament.id%}">{{match.pool.tournament}}</a></li>
+<li class="nav-item"><a class="nav-link" href="{%url 'tournaments:poule_detail' match.pool.id%}">Poule {{match.pool.pool_number}}</a></li>
+<li class="nav-item"><a class="nav-link active" href="">{{match}}</a></li>
+{% endblock %}
+
 {% block head %}
 <style>
     table {
