--- a/tournois/tournaments/templates/tournaments/tournoi_detail.html
+++ b/tournois/tournaments/templates/tournaments/tournoi_detail.html
@@ -1,4 +1,10 @@
 {% extends 'base.html' %}
+{% block navbar_items %}
+<li class="nav-item"><a class="nav-link" href={%url 'tournaments:tournois'%}>Tournois</a></li>
+<li class="nav-item"><a class="nav-link active" href="" aria-current="page">{{tournoi}}</a></li>
+{% endblock %}
+
+
 {% block content %}
 
 {% if tournoi %}
